# sovereign-skills-season5

./: .editorconfig  .gitattributes  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: sovereign-ci.yml
skills/adversarial-ai-red-teaming/: SKILL.md
skills/llm-alignment-safety/: SKILL.md
skills/sovereign-ai-architect/: SKILL.md
skills/sovereign-llm-training/: SKILL.md
