[project]
name = "sovereign-skills-season5"
version = "0.1.0"
requires-python = ">=3.10"

[tool.ruff]
line-length = 120
exclude = ["archive", "legacy", "vendor", ".venv", "venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
ignore_missing_imports = true
exclude = ["archive", "legacy", "vendor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
